appointmetn save issue due to dateformat fixed.. in restapi ids for patitengafamilyhx and lifestyle added

--- a/WebApp/Views/Appointment/PartialUpcoming.cshtml
+++ b/WebApp/Views/Appointment/PartialUpcoming.cshtml
@@ -80,35 +80,18 @@ else
              
         //    ]
         //});
-        $('#datatable-keytable').DataTable({
-          keys: true
-        });
+       
+     //   $('#datatable').DataTable();
 
-        $('#datatable-responsive').DataTable();
+      
 
-        $('#datatable-scroller').DataTable({
-          ajax: "js/datatables/json/scroller-demo.json",
-          deferRender: true,
-          scrollY: 380,
-          scrollCollapse: true,
-          scroller: true
-        });
-
-        $('#datatable-fixed-header').DataTable({
+        $('#datatable').DataTable({
           fixedHeader: true
         });
 
        
        
-        //$datatable.dataTable({
-        //  'order': [[ 1, 'desc' ]],
-        //  'columnDefs': [
-        //    { orderable: false, targets: [0] },
-             
-        //  ]
-        //});
         
-
         
       });
 </script>
@@ -144,6 +127,6 @@ else
 
 
     });
-    </script>>
+    </script>
 
 
